force-app/main/default/objects/TWIST_Recaptcha_Settings__c/TWIST_Recaptcha_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TWIST Recaptcha Settings</label>
</CustomObject>