force-app/main/default/objects/TWIST_Recaptcha_Settings__c/fields/Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Secret_Key__c</fullName>
    <label>Secret Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>