force-app/main/default/objects/TWIST_Recaptcha_Settings__c/fields/Site_Key__c.field-meta.xml
<CustomField>
    <fullName>Site_Key__c</fullName>
    <label>Site Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>