force-app/main/default/objects/TWIST_Recaptcha_Settings__c/fields/Site_Verify_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Site_Verify_Endpoint__c</fullName>
    <label>Site Verify Endpoint</label>
    <length>50</length>
    <type>Text</type>
</CustomField>