force-app/main/default/objects/TWIST_Recaptcha_Settings__c/fields/Treshhold__c.field-meta.xml
<CustomField>
    <fullName>Treshhold__c</fullName>
    <description>A reCAPTCHA greater or equals tp this threshold likely corresponds to a human</description>
    <label>Threshold</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>